frontend/src/components/Worksheet/CalendarEvent.module.css
.event {
  width: 100%;
  height: 100%;
}

.eventButtons {
  display: flex;
  gap: 2px;
  flex-direction: column;
  position: absolute;
  top: 0;
  right: 0;
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
}

.eventButtons:hover,
.event:hover ~ .eventButtons {
  opacity: 1;
}

.worksheetHideButton {
  background-color: white !important;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  border: 1px solid #ccc !important;
}

@media (max-width: 768px) {
  .courseCodeText {
    text-align: left;
    font-size: 12px;
  }

  .courseNameText {
    display: none;
  }
}

.courseNameText {
  font-size: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.locationText {
  font-weight: 500;
}

.lastUpdatedText {
  font-size: 12px;
  font-weight: 500;
  font-style: italic;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

@media (max-width: calc(768px - 0.5px)) {
  .locationText {
    display: none;
  }
}

